menu wrapping fix

--- a/SWEET/static/css/menu.css
+++ b/SWEET/static/css/menu.css
@@ -1,7 +1,3 @@
-.nav-normal .card-title {
-    white-space: nowrap;
-}
-
 :is(.nav-normal, .nav-described) .card-body {
     width: fit-content;
     margin: 0 auto;
